Added minhaConta module

--- a/frontend/src/main/frontend/src/app/toolbar/layouts/vertical-navigation/toolbar.html
+++ b/frontend/src/main/frontend/src/app/toolbar/layouts/vertical-navigation/toolbar.html
@@ -39,7 +39,7 @@
                 <md-menu-content width="3">
                     <md-menu-item class="md-indent" ui-sref="app.pages_profile">
                         <md-icon md-font-icon="icon-account" class="icon"></md-icon>
-                        <md-button>Minha Conta</md-button>
+                        <md-button ng-click="vm.minhaConta()">Minha Conta</md-button>
                     </md-menu-item>
 
                     <!-- <md-menu-item class="md-indent" ui-sref="app.mail">
