Added Esqueci Senha Module

--- a/frontend/src/main/frontend/src/app/main/login/login.html
+++ b/frontend/src/main/frontend/src/app/main/login/login.html
@@ -34,7 +34,7 @@
                      layout-align="space-between center">
                     <p></p>
 
-                    <a ui-sref="app.pages_auth_forgot-password" class="forgot-password md-accent-color">Esqueceu a senha?</a>
+                    <a ui-sref="app.esqueciSenha" class="forgot-password md-accent-color">Esqueceu a senha?</a>
                 </div>
 
                 <md-button ng-click="vm.login($event)" type="submit" class="md-raised md-accent submit-button" aria-label="LOG IN"
