--- a/frontend/src/main/frontend/src/app/main/relatorio/relatorio.html
+++ b/frontend/src/main/frontend/src/app/main/relatorio/relatorio.html
@@ -16,69 +16,9 @@
         <span class="logo-text">Relatório Financeiro</span>
       </div>
     </div>
-    <!-- / APP TITLE -->
-
-    <!-- SEARCH -->
-    <!-- <div class="search-input-wrapper" layout="row" layout-align="start center">
-      <label for="search">
-        <md-icon md-font-icon="icon-magnify"></md-icon>
-      </label>
-      <md-input-container md-no-float class="m-0">
-        <input id="search" placeholder="Pesquisar associados..." type="text" ng-model="vm.search">
-      </md-input-container>
-    </div> -->
-    <!-- / SEARCH -->
 
   </div>
   <!-- / HEADER -->
-
-  <!-- SELECTED BAR -->
-  <!-- <div ng-show="vm.selectedContacts.length > 0" class="selected-bar header animate-slide-down md-accent-bg" layout="row" layout-align="start center">
-
-    <div class="close-button-wrapper" ng-click="vm.selectedContacts =[]">
-      <md-button layout="row" layout-align="start center">
-        <md-icon md-font-icon="icon-arrow-left" class="mr-8"></md-icon>
-        <span>Voltar</span>
-      </md-button>
-    </div>
-
-    <div flex layout="row" layout-align="space-between center">
-
-      <div>
-        <span class="selected-contacts-count">
-        <span>{{vm.selectedContacts.length}}</span>
-        <span>selecionado(s)</span>
-        </span>
-
-        <md-menu class="select-menu" ng-if="!vm.currentThread">
-          <md-button class="md-icon-button" ng-click="$mdOpenMenu($event)" aria-label="multi select toggle">
-            <md-icon md-font-icon="icon-menu-down"></md-icon>
-          </md-button>
-          <md-menu-content width="3">
-            <md-menu-item>
-              <md-button ng-click="vm.selectAllContacts()">
-                Selecionar todos
-              </md-button>
-            </md-menu-item>
-            <md-menu-item>
-              <md-button ng-click="vm.deselectContacts()">
-                Selecionar nenhum
-              </md-button>
-            </md-menu-item>
-          </md-menu-content>
-        </md-menu>
-      </div>
-
-      <div class="multi-select-actions">
-        <md-button class="md-icon-button" ng-click="vm.deleteSelectedContacts($event)" aria-label="apagar selecionados">
-          <md-icon md-font-icon="icon-delete"></md-icon>
-        </md-button>
-      </div>
-
-    </div>
-
-  </div> -->
-  <!-- / SELECTED BAR -->
 
   <!-- CONTENT -->
   <div class="content" md-background-bg layout="row" layout-align="start start">
@@ -87,7 +27,7 @@
     <div class="main scrollable" ms-scroll>
 
       <!-- ENTRADA DE PAGAMENTO -->
-      <form name="informaPgto">
+      <form name="informaPgto" ng-show="vm.searched == false">
         <md-card>
           <md-card-header>
             <md-card-header-text>
@@ -96,15 +36,7 @@
             </md-card-header-text>
           </md-card-header>
 
-
           <md-card-content layout="row">
-            <!--
-            <md-input-container>
-              <label>CPF do Associado</label>
-              <md-icon md-font-icon="icon-account-box"></md-icon>
-              <input ng-blur="vm.buscaCpf()" ng-model="vm.cpf" type="text" mask="999.999.999-99" required>
-            </md-input-container>
-            -->
 
             <md-input-container>
               <md-datepicker ng-model="vm.dataInicio" md-placeholder="Data Inicio" md-open-on-focus></md-datepicker>
@@ -122,64 +54,67 @@
         </div>
 
         <div layout="row" layout-align="center">
-          <md-button ng-click="vm.openAssociadoDialog($event)" class="md-accent md-raised">Consultar</md-button>
+          <md-button ng-click="vm.buscaPagamentos()" class="md-accent md-raised">Consultar</md-button>
           <md-button ng-click="vm.limpaForm()">Limpar</md-button>
         </div>
       </form>
       <!-- / ENTRADA DE PAGAMENTO -->
 
-      <form name="informaPgto">
-        <md-card ng-hide="!vm.pagamentos"> <!-- Esconde tabela caso pagamentos for vazio -->
-          <md-card-header>
-            <md-card-header-text>
-              <span class="md-title">Associado</span></br>
-              <span class="md-subhead">{{vm.pagamentos[0].cpf}}</span> </br>
-              <span class="md-subhead">{{vm.pagamentos[0].nome}}</span> </br>
-
-
-
-              <div class="simple-table-container md-whiteframe-4dp">
-                <div class="table-title">
-                  Pagamentos:
-                </div>
-
-                <table class="simple" ms-responsive-table>
-                  <thead>
-                    <tr>
-                      <th></th>
-                      <th ng-repeat="pagamento in vm.pagamentos">{{pagamento.mes}}</th>
-                      <th>Total</th>
-                    </tr>
-                  </thead>
-
-                  <tbody>
-                    <tr>
-                      <td>Data</td>
-                      <td ng-repeat="pagamento in vm.pagamentos">{{pagamento.dataPag | date: 'dd/MM/yyyy'}}</td>
-                    </tr>
-                    <tr>
-                      <td>Valor</td>
-                      <td ng-repeat="pagamento in vm.pagamentos">{{pagamento.valor | currency:"R$":2}}</td>
-                      <td>{{vm.total | currency:"R$":2}}</td>
-                    </tr>
-                  </tbody>
-                </table>
+      <form name="dataPgto" ng-show="vm.searched == true">
+        <md-card> <!-- Esconde tabela caso pagamentos for vazio -->
+          <div class="simple-table-container md-whiteframe-4dp" id="pagamentosTable">
+            <div class="table-title">
+              Pagamentos:
             </div>
 
+            <table class="simple" ms-responsive-table id="realTable">
 
-          </md-card-header-text>
-        </md-card-header>
+              <thead>
+                <tr ng-repeat="pagamento in vm.pagamentos | limitTo:1">
+                  <th ng-if="$index == 0">Cliente</th>
+                  <th ng-repeat="pag in pagamento.pagamentos | limitTo:$index.length"> {{pag.dataPgto | date : "_/MM/yyyy"}} </th>
+                  <th>Total</th>
+                </tr><!--
+                <tr ng-repeat="pagamento in vm.pagamentos">
+
+                  <th ng-repeat-start="pag in pagamento.pagamentos"> {{pag.dataPgto}} </th>
+                  <th ng-repeat-end></th>
+                </tr> -->
+              </thead>
+
+              <tbody>
+
+                <tr ng-repeat="pagamento in vm.pagamentos">
+                  <td>{{pagamento.nome}}</td>
+                  <td ng-repeat="pag in pagamento.pagamentos"> {{pag.valorPago | currency : "R$ "}} </td>
+                  <td>{{pagamento.total | currency : "R$ "}}</td>
+
+                </tr>
+
+              </tbody>
+            </table>
+
+
+        </div>
       </md-card>
+      </br>
+      <div layout="row" layout-align="center"> <!-- Retirar os styles daqui -->
+        <md-button ng-click="vm.novaConsulta()" class="md-accent md-raised">Nova Consulta</md-button>
+        <md-button ng-click="vm.exportarExcel()" class="btnExcel">
+          <md-icon md-font-icon="icon-file-excel" class="iconExcel" style="color: white;"></md-icon>
+          Excel
+        </md-button>
+        <md-button ng-click="vm.exportarPdf()" class="btnPdf">
+          <md-icon md-font-icon="icon-file-pdf" class="iconPdf" style="color: white;"></md-icon>
+          PDF
+        </md-button>
+      </div>
+      </br>
+      </br>
     </form>
 
 </div>
     <!-- / MAIN -->
 </div>
   <!-- / CONTENT -->
-
-  <!-- ADD CONTACT BUTTON -->
-  <!-- <md-button class="md-fab md-accent md-icon-button" id="add-contact-button" ng-click="vm.openContactDialog($event)" aria-label="Adicionar associado">
-    <md-icon md-font-icon="icon-account-plus"></md-icon>
-  </md-button> -->
-  <!-- / ADD CONTACT BUTTON -->
 </div>
