--- a/frontend/src/main/frontend/src/app/main/associados/associados.scss
+++ b/frontend/src/main/frontend/src/app/main/associados/associados.scss
@@ -210,3 +210,37 @@
         }
     }
 }
+
+div.item p.pagamentoAssociado{
+    margin-right: -30px;
+    width: 70px;
+}
+
+div.item p.valorAssociado{
+
+    margin-right: 20px;
+    width: 70px;
+}
+
+div.item p.nomeAssociado{
+    margin-right: 45px;
+    width: 200px;
+}
+
+div.item p.cpfAssociado{
+
+    margin-right: 65px;
+    width: 70px;
+}
+
+
+div.item p.telefone{
+    margin-right: 55px;
+    width: 70px;
+}
+
+div.item p.emailAssociado{
+
+    margin-right: 90px;
+    width: 150px;
+}
