--- a/frontend/src/main/frontend/src/app/main/pagamento/pagamento.scss
+++ b/frontend/src/main/frontend/src/app/main/pagamento/pagamento.scss
@@ -210,3 +210,30 @@
         }
     }
 }
+
+
+div.item p.id{
+    margin-right: 60px;
+    width: 40px;
+    text-align: right;
+}
+
+div.item p.cpf{
+    margin-right: 80px;
+}
+
+div.item p.nome{
+    margin-right: 40px;
+}
+
+div.item p.formaPagamento{
+    margin-right: 20px;
+}
+
+div.item p.dataPagamento{
+    margin-right: 30px;
+}
+
+div.item p.valorPago{
+    margin-right: 80px;
+}
