--- a/frontend/src/main/frontend/src/app/main/usuario/usuario.scss
+++ b/frontend/src/main/frontend/src/app/main/usuario/usuario.scss
@@ -210,3 +210,28 @@
         }
     }
 }
+
+
+div.item p.usuario{
+    margin-right: 110px;
+    width: 120px;
+}
+
+div.item p.setor{
+
+    margin-left: 45px;
+    margin-right: 110px;
+    width: 120px;
+}
+
+div.item p.ativo{
+
+    margin-right: 75px;
+    width: 120px;
+}
+
+div.item p.email{
+
+    margin-right: 110px;
+    width: 120px;
+}
