--- a/frontend/src/main/frontend/src/app/index.scss
+++ b/frontend/src/main/frontend/src/app/index.scss
@@ -20,14 +20,23 @@ md-list-item, md-list-item .md-list-item-inner {
 div.item p.data{
     width: 100px;
     text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 div.item p.texto{
     width: 100px;
     text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 div.item p.numero{
     width: 100px;
     text-align: right;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
